# ComputerEnhance_Haversine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  haversine_results.f64
haversine/sauce/: defines.h  haversine.c  haversine.h  haversine_generator.c  haversine_generator.h  main.c  read_tests.c  read_tests.h  rep_tests.c  rep_tests.h  shm_utils_impl.c
haversine/sauce/asm/: build_win64_asm_libs.bat  test_write_all_bytes.asm  test_write_all_bytes.lib  win64_test_loops.asm  win64_test_loops.lib
haversine/sauce/platform/: platform.h  platform_win32.c  shm_intrin.h  shm_platform.h  shm_platform_win32.c
haversine/sauce/utility/: shm_json.c  shm_json.h  shm_profiler.c  shm_profiler.h  shm_rand.c  shm_repetition_tester.c  shm_repetition_tester.h  shm_string.c  shm_string.h  shm_utils_common_defines.h
sauce/: haversine_calc.c  haversine_calc.h  haversine_generator.c  haversine_generator.h  haversine_tests.c  haversine_tests.h  main.c  mem_tests.c  mem_tests.h  rep_tests.c  rep_tests.h  shm_utils_impl.c
sauce/asm/: win64_test_loops.asm  win64_test_loops.lib
sauce/shm_utils/: shm_json.c  shm_json.h  shm_profiler.c  shm_repetition_tester.h  shm_utils_common_defines.h
sauce/shm_utils/platform/: shm_intrin.h  shm_platform.h  shm_platform_win32.c
